...
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/default_avatar" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/follow_username_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
...
